se aplica filtro a la peticion po proveedor #3
